<resources>
    <string name="app_name">Music Player</string>
    <string name="song_image_description">Current song image</string>
    <string name="playback_mode_description">Playback mode button</string>
    <string name="previous_description">Previous button</string>
    <string name="play_pause_description">Play/Pause button</string>
    <string name="next_description">Next button</string>
    <string name="options_description">Options button</string>


</resources>